# app-packer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build.yml
cmake/: cpack.cmake  deps.cmake  get-cpm.cmake
resources/icons/: myapp.icns
resources/macos/: Info.plist
resources/windows/: myapp.rc
src/: main.cpp
